fixed linked agent label (now "Name" and "Names") in en translation

--- a/public/locales/en.yml
+++ b/public/locales/en.yml
@@ -2,10 +2,10 @@ en:
   brand:
     title: Johns Hopkins University Libraries Archives Public Interface
     home: Home
-    welcome_message: Search our collections.
+    welcome_message: Welcome to ArchivesSpace.
     welcome_search_label: >
       Search the Sheridan Libraries' collection guides for university records and manuscript collections below.
-      For access to digital collections please visit
+      For access to digital collections, please visit
       our institutional repository, %{instrepo},
       our collection of online sheet music, %{levycoll}.
       or our data repository, %{datarepo}.
@@ -72,3 +72,32 @@ en:
   record_tree:
     record_tree_tab: Collection Details
     search_tab: Search this Collection
+
+  # this should be updated from common/locales/en.yml "linked_agent" after upgrades
+  linked_agent: &linked_agent_attributes
+    role: Role
+    role_tooltip: |
+        <p>REQUIRED FIELD. An indication of what function (creator, source, or subject) the Agent has in regards to its link to a certain description record.</p>
+    relator: Relator
+    relator_tooltip: |
+        <p>An indication of what role the Agent has in regards to its function as indicated in how it is linked (e.g., creator, source, or subject) to a certain description record. For example, a Agent may be linked as a creator to a record, but with the more specific role of "illustrator".</p>
+        <p>See MARC Code List for Relators.</p>
+    ref: Agent
+    # ref_tooltip is not displaying
+    ref_tooltip: |
+        <p>The Agent related to the material described in the record.</p>
+        <p>Agents may be searched using auto-complete, using a browse function, or may be created on demand.</p>
+    terms: Terms
+    title: Title
+    title_tooltip: |
+        <p>Optional field: Record here the authoritative title of a work in order to make a Name / Title heading for an agent linked as a creator or a subject:</p>
+        <p>For example,</p>
+        <ul><li>Shakespeare, William, 1564-1616. King Lear</li><li> Pound, Ezra, 1885-1972. Cantos</li><li> Lincoln, Abraham, 1809-1865. Emancipation Proclamation</li></ul>
+    _singular: Agent Link
+    _plural: Agent Links
+
+  # this is the override for linked agents
+  linked_agent:
+    << : *linked_agent_attributes
+    _singular: Name
+    _plural: Names
