--- a/public/locales/en.yml
+++ b/public/locales/en.yml
@@ -2,9 +2,9 @@ en:
   brand:
     title: Johns Hopkins University Libraries Archives Public Interface
     home: Home
-    welcome_message: Welcome to ArchivesSpace
+    welcome_message: Welcome to %{service_name}
     welcome_search_label: >
-      Search the Sheridan Libraries' collection guides for university records and manuscript collections.
+      Search the libraries' collection guides for university records and manuscript collections.
 
   plugins:
     jhu_public:
@@ -44,11 +44,13 @@ en:
         heading: 'For access to our digital collections, please visit:'
 
       jhu_nav:
-        - {'link': 'http://library.jhu.edu/', 'label': 'Sheridan Libraries' }
-        - {'link': 'http://welch.jhmi.edu/', 'label': 'Welch Medical Library' }
-        - {'link': 'http://www.sais-jhu.edu/library/', 'label': 'SAIS Library' }
-        - {'link': 'http://musiclibrary.peabody.jhu.edu/', 'label': 'Freidheim Library' }
-        - {'link': 'https://aplweb/departments/itsd/iks/Pages/IKS.aspx', 'label': 'APL Library' }
+        heading: 'RETURN TO YOUR LIBRARY:'
+        links:
+          - {'link': 'http://library.jhu.edu/', 'label': 'Sheridan Libraries' }
+          - {'link': 'http://welch.jhmi.edu/', 'label': 'Welch Medical Library' }
+          - {'link': 'http://www.sais-jhu.edu/library/', 'label': 'SAIS Library' }
+          - {'link': 'http://musiclibrary.peabody.jhu.edu/', 'label': 'Freidheim Library' }
+          - {'link': 'https://aplweb/departments/itsd/iks/Pages/IKS.aspx', 'label': 'APL Library' }
 
 
   # make changes to this one. it is merged into others below.
