added mailing address to contact us and locale parameterized contact us

--- a/public/locales/en.yml
+++ b/public/locales/en.yml
@@ -16,6 +16,17 @@ en:
           short: Contact Us
           long: Contact Us
         url: "#"
+        ref_url:
+          label: 'Reference this link: '
+        phone:
+          label: 'Phone: '
+          value: '410-516-8348'
+        email:
+          label: 'Email: '
+          value: 'specialcollections@lists.jhu.edu'
+        address:
+          label: ''
+          value: 'Brody Learning Commons, Room 2045<br />3400 N. Charles Street<br />Baltimore, Maryland<br />21218 USA'
 
       instrepo:
         role: institutional repository
